# dockerFastapi

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  livros.db  main.py  pyproject.toml
